# pykostal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  renovate.json  renovate.json5  requirements.txt  setup.py  test_piko.py  tox.ini
.github/workflows/: release.yml  renovate.yml  test.yml
kostal/: ActualAnalogInputs.py  ActualBattery.py  ActualGenerator.py  ActualGrid.py  ActualHome.py  ActualSZeroIn.py  DxsApi.py  Home.py  InfoVersions.py  SettingsGeneral.py  StatisticDay.py  StatisticTotal.py  __init__.py  const.py
